--- a/ins/Instructores.html
+++ b/ins/Instructores.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../not/buscar-miembros.css">
     <link rel="stylesheet" href="../not/navbar-responsive-sin-cambiar-html.css">
     <script type="module" src="./headBot.js"></script>
-    <script src="accesibilidad.js" defer></script>
+    <script src="../accesibilidad.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="../IMAGENES/LOGO.png" type="image/png">
 </head>
@@ -268,17 +268,17 @@
                     Todos los derechos reservados                                                           
                 </p>
                 <p class="footer-copyright">
-                    Powered by ALBA                                                        
-                </p>                  
+                    Powered by <a href="https://www.linkedin.com/in/alba-ingenier%C3%ADa-de-desarrollo-42a3493ab/" target="_blank" style="text-decoration: none; color: inherit;">ALBA</a>                                                       
+                </p>                    
             </div>
 
             <div class="footer-section">
                 <h4>Nosotros</h4>
                 <ul>
-                    <li><a href="#">Cuerpo General de Paramédicos Voluntarios</a></li>
-                    <li><a href="#">Independencia 102, Barranco, Lima, Perú</a></li>
-                    <li><a href="tel:+51987654321">Teléfono: +51 953 958 371</a></li>
-                    <li><a href="/cdn-cgi/l/email-protection#c0a9aea6af80b0a1b2a1ada5a4a9a3afb3eeb0a5">Email: <span class="__cf_email__" data-cfemail="f29b9c949db2829380939f97969b919d81dc8297">[email&#160;protected]</span></a></li>
+                    <li><a>Cuerpo General de Paramédicos Voluntarios</a></li>
+                    <li><a>Lima, Perú</a></li>
+                    <li><a>Teléfono: 929285669</a></li>
+                    <li><a>Email: cuerpodeparamedicosvoluntarios@gmail.com</a></li>
                 </ul>
             </div>
 
