--- a/un/Unete.html
+++ b/un/Unete.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../not/buscar-miembros.css">
     <link rel="stylesheet" href="unete-navbar-responsive.css">
     <script type="module" src="./headBot.js"></script>
-    <script src="accesibilidad.js" defer></script>
+    <script src="../accesibilidad.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="../IMAGENES/LOGO.png" type="image/png">
 </head>
@@ -479,17 +479,17 @@
                     Todos los derechos reservados                                                           
                 </p>
                 <p class="footer-copyright">
-                    Powered by <a href="https://TU-LINK-AQUI.com" target="_blank" style="text-decoration: none; color: inherit;">ALBA</a>                                                       
+                    Powered by <a href="https://www.linkedin.com/in/alba-ingenier%C3%ADa-de-desarrollo-42a3493ab/" target="_blank" style="text-decoration: none; color: inherit;">ALBA</a>                                                       
                 </p>                  
             </div>
 
             <div class="footer-section">
                 <h4>Nosotros</h4>
                 <ul>
-                    <li><a href="#">Cuerpo General de Paramédicos Voluntarios</a></li>
-                    <li><a href="#">Independencia 102, Barranco, Lima, Perú</a></li>
-                    <li><a href="tel:+51987654321">Teléfono: +51 953 958 371</a></li>
-                    <li><a href="mailto:contacto@cgpvp.org">Email: contacto@cgpvp.org</a></li>
+                    <li><a>Cuerpo General de Paramédicos Voluntarios</a></li>
+                    <li><a>Lima, Perú</a></li>
+                    <li><a>Teléfono: 929285669</a></li>
+                    <li><a>Email: cuerpodeparamedicosvoluntarios@gmail.com</a></li>
                 </ul>
             </div>
 
