subiendo script para hasheo de busqueda

--- a/ins/Instructores.html
+++ b/ins/Instructores.html
@@ -573,6 +573,6 @@
 
     <!-- 🔥 SCRIPT DE CONSUMO DE API - INTEGRADO CON TU SISTEMA EXISTENTE -->
     <script src="instructores-api.js"></script>
-
+    <script src="../not/buscar-miembros.js"></script>
 </body>
 </html>
