--- a/nos/Nosotros.html
+++ b/nos/Nosotros.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="../not/buscar-miembros.css">
     <link rel="stylesheet" href="../not/navbar-responsive-sin-cambiar-html.css">
     <script type="module" src="./headBot.js"></script>
-    <script src="../accesibilidad.js" defer></script> 
+    <script src="../accesibilidad.js" defer></script>
+    <script src="../f2.js" defer></script>  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="../IMAGENES/LOGO.png" type="image/png">
 </head>
