--- a/index.html
+++ b/index.html
@@ -98,36 +98,38 @@
 </head>
 <body>
 
-    <header class="main-navbar">
-        <div class="nav-content">
-            <div class="brand">
+   <header class="main-navbar">
+    <div class="nav-content">
+        <div class="brand">
+            <a href="index.html" class="logo-link">
                 <div class="logo-container">
                     <img src="IMAGENES/LOGO.png" alt="Logo CGPVP">
                 </div>
-                <div class="brand-titles">
-                    <span>Cuerpo General de</span>
-                    <span>Paramédicos Voluntarios</span>
-                    <span>del Perú</span>
-                </div>
+            </a>
+            
+            <div class="brand-titles">
+                <span>Cuerpo General de</span>
+                <span>Paramédicos Voluntarios</span>
+                <span>del Perú</span>
             </div>
-
-            <nav class="nav-links">
-                <div class="navbar-search">
-                    <input type="text" id="navbarSearchInput" placeholder="Buscar integrante..." aria-label="Buscar en el sitio">
-                    <button type="button" class="search-btn" aria-label="Buscar">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </div>
-
-            <nav class="nav-links">
-                <a href="index.html" class="active">Inicio</a>
-                <a href="nos/Nosotros.html">Nosotros</a>               
-                <a href="un/Unete.html">Únete</a>
-                <a href="ins/Instructores.html">Instructores</a>
-                <a href="cur/Cursos.html">Cursos</a>
-                <a href="not/noticias.html">Noticias</a>                
-            </nav>
         </div>
+
+        <div class="navbar-search">
+            <input type="text" id="navbarSearchInput" placeholder="Buscar integrante..." aria-label="Buscar en el sitio">
+            <button type="button" class="search-btn" aria-label="Buscar">
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
+
+        <nav class="nav-links">
+            <a href="index.html" class="active">Inicio</a>
+            <a href="nos/Nosotros.html">Nosotros</a>               
+            <a href="un/Unete.html">Únete</a>
+            <a href="ins/Instructores.html">Instructores</a>
+            <a href="cur/Cursos.html">Cursos</a>
+            <a href="not/noticias.html">Noticias</a>                
+        </nav>
+    </div>
     </header>
 
     <section class="hero-banner">
