--- a/nos/Nosotros.html
+++ b/nos/Nosotros.html
@@ -18,11 +18,13 @@
 <body>
 
     <header class="main-navbar">
-        <div class="nav-content">
-            <div class="brand">
-                <div class="logo-container">
+    <div class="nav-content">
+        <div class="brand">
+            <div class="logo-container">
+                <a href="../index.html">
                     <img src="../IMAGENES/LOGO.png" alt="Logo CGPVP">
-                </div>
+                </a>
+            </div>
                 <div class="brand-titles">
                     <span>Cuerpo General de</span>
                     <span>Paramédicos Voluntarios</span>
