--- a/index.html
+++ b/index.html
@@ -113,23 +113,26 @@
                 <span>del Perú</span>
             </div>
         </div>
-
-        <div class="navbar-search">
-            <input type="text" id="navbarSearchInput" placeholder="Buscar integrante..." aria-label="Buscar en el sitio">
-            <button type="button" class="search-btn" aria-label="Buscar">
-                <i class="fas fa-search"></i>
-            </button>
-        </div>
-
-        <nav class="nav-links">
-            <a href="index.html" class="active">Inicio</a>
-            <a href="nos/Nosotros.html">Nosotros</a>               
-            <a href="un/Unete.html">Únete</a>
-            <a href="ins/Instructores.html">Instructores</a>
-            <a href="cur/Cursos.html">Cursos</a>
-            <a href="not/noticias.html">Noticias</a>                
-        </nav>
     </div>
+</header>
+
+            <nav class="nav-links">
+                <div class="navbar-search">
+                    <input type="text" id="navbarSearchInput" placeholder="Buscar integrante..." aria-label="Buscar en el sitio">
+                    <button type="button" class="search-btn" aria-label="Buscar">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+
+            <nav class="nav-links">
+                <a href="index.html" class="active">Inicio</a>
+                <a href="nos/Nosotros.html">Nosotros</a>               
+                <a href="un/Unete.html">Únete</a>
+                <a href="ins/Instructores.html">Instructores</a>
+                <a href="cur/Cursos.html">Cursos</a>
+                <a href="not/noticias.html">Noticias</a>                
+            </nav>
+        </div>
     </header>
 
     <section class="hero-banner">
