--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="not/buscar-miembros.css">
     <link rel="stylesheet" href="not/navbar-responsive-sin-cambiar-html.css">
     <script src="accesibilidad.js" defer></script>
-    <script src="f2.js" defer></script> 
+     <script src="f2.js" defer></script>
     <script type="module" src="./headBot.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="IMAGENES/LOGO.png" type="image/png">
@@ -98,23 +98,20 @@
 </head>
 <body>
 
-   <header class="main-navbar">
-    <div class="nav-content">
-        <div class="brand">
-            <a href="index.html" class="logo-link">
-                <div class="logo-container">
-                    <img src="IMAGENES/LOGO.png" alt="Logo CGPVP">
-                </div>
+    <header class="main-navbar">
+        <div class="nav-content">
+    <div class="brand">
+        <div class="logo-container">
+            <a href="index.html">
+                <img src="IMAGENES/LOGO.png" alt="Logo CGPVP">
             </a>
-            
-            <div class="brand-titles">
-                <span>Cuerpo General de</span>
-                <span>Paramédicos Voluntarios</span>
-                <span>del Perú</span>
-            </div>
+        </div>
+        <div class="brand-titles">
+            <span>Cuerpo General de</span>
+            <span>Paramédicos Voluntarios</span>
+            <span>del Perú</span>
         </div>
     </div>
-</header>
 
             <nav class="nav-links">
                 <div class="navbar-search">
