--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
                     <h2>Conoce más sobre nuestra institución</h2>
                     <p>Descubre nuestra historia, misión y valores. Somos una organización comprometida con la formación de paramédicos profesionales que marcan la diferencia en situaciones de emergencia.</p>
                     <div class="cta-buttons">
-                        <a href="../nos/Nosotros.html" class="btn-cta-primary">
+                        <a href="nos/Nosotros.html" class="btn-cta-primary">
                             <i class="fas fa-users"></i> Sobre Nosotros
                         </a>
-                        <a href="../cur/Cursos.html" class="btn-cta-secondary">
+                        <a href="cur/Cursos.html" class="btn-cta-secondary">
                             <i class="fas fa-graduation-cap"></i> Ver Cursos
                         </a>
                     </div>
