--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="not/buscar-miembros.css">
     <link rel="stylesheet" href="not/navbar-responsive-sin-cambiar-html.css">
     <script src="accesibilidad_1.js" defer></script>
-     <script src="f2.js" defer></script>
+     <script src="f2_1.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="IMAGENES/LOGO.png" type="image/png">
 
