--- a/un/Unete.html
+++ b/un/Unete.html
@@ -509,6 +509,10 @@
     <!-- FOOTER -->
     <footer class="main-footer">
         <div class="footer-content">
+            <!-- TÍTULO ALIADOS -->
+            <p class="footer-allies-title">
+                <i class="fas fa-globe" style="margin-right:8px;"></i>Principales Aliados Internacionales
+            </p>
             <div class="footer-partners-logos">
                 <a href="https://americancollegefire.org/" target="_blank" class="partner-logo" aria-label="Socio 1">
                     <img src="../IMAGENES/logo1.png" alt="Socio 1">
