--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="not/buscar-miembros.css">
     <link rel="stylesheet" href="not/navbar-responsive-sin-cambiar-html.css">
     <script src="accesibilidad_1.js" defer></script>
-     <script src="f2_1.js" defer></script>
+    <script src="f2_1.js" defer></script> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="IMAGENES/LOGO.png" type="image/png">
 
@@ -92,6 +92,21 @@
             .c-arrow:active { background: rgba(197,160,89,0.9); }
             .c-arrow-left  { margin-right: 4px; }
             .c-arrow-right { margin-left:  4px; }
+        }
+
+        /* ==============================
+           TÍTULO ALIADOS EN FOOTER
+        ============================== */
+        .footer-allies-title {
+            width: 100%;
+            text-align: center;
+            color: #c5a059;
+            font-size: 13px;
+            font-weight: 700;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            margin-bottom: 16px;
+            opacity: 0.95;
         }
     </style>
 </head>
@@ -299,6 +314,12 @@
 
     <footer class="main-footer">
         <div class="footer-content">
+
+            <!-- TÍTULO ENCIMA DE LOS LOGOS -->
+            <p class="footer-allies-title">
+                <i class="fas fa-globe" style="margin-right:8px;"></i>Principales Aliados Internacionales
+            </p>
+
             <div class="footer-partners-logos">
                 <a href="https://americancollegefire.org/" target="_blank" class="partner-logo" aria-label="Socio 1"><img src="IMAGENES/logo1.png" alt="Socio 1"></a>
                 <a href="https://usar-internationalrescue.org/" target="_blank" class="partner-logo" aria-label="Socio 2"><img src="IMAGENES/logo2.png" alt="Socio 2"></a>
@@ -316,7 +337,7 @@
                     <a href="https://www.tiktok.com/@paramedicos.pe/video/7371679537878404358" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
                 </div>
                 <p class="footer-copyright">
-                    Cuerpo General de Paramédicos Voluntarios del Perú © 2025.<br>
+                    Cuerpo General de Paramédicos Voluntarios del Perú © 2026.<br>
                     Todos los derechos reservados
                 </p>
                 <p class="footer-copyright">
