--- a/not/noticias.html
+++ b/not/noticias.html
@@ -354,6 +354,10 @@
     <!-- FOOTER MEJORADO CON LOGOS CIRCULARES -->
     <footer class="main-footer">
         <div class="footer-content">
+            <!-- TÍTULO ALIADOS -->
+            <p class="footer-allies-title">
+                <i class="fas fa-globe" style="margin-right:8px;"></i>Principales Aliados Internacionales
+            </p>
             <!-- Logos circulares superiores -->
             <div class="footer-partners-logos">
                 <a href="https://www.tccc-mp.com/" target="_blank" class="partner-logo" aria-label="Socio 1">
