--- a/cur/Cursos.html
+++ b/cur/Cursos.html
@@ -92,12 +92,12 @@
             <div class="courses-section">
                 
                 <!-- Anuncio - Únete a nuestros cursos -->
-<article class="course-featured reveal reveal-scale" style="background: linear-gradient(135deg, #00093C 0%, #001159 100%); border: 3px solid #c5a059; min-height: 280px;">
-    <div class="featured-image" style="background: transparent; padding: 20px;">
+<div id="anuncio-estatico" style="background: linear-gradient(135deg, #00093C 0%, #001159 100%); border: 3px solid #c5a059; min-height: 280px; border-radius: 20px; overflow: hidden; display: grid; grid-template-columns: 320px 1fr; margin-bottom: 40px;">
+    <div style="background: transparent; padding: 20px; display: flex; align-items: center; justify-content: center;">
         <i class="fas fa-graduation-cap" style="font-size: 100px; color: #c5a059;"></i>
     </div>
-    <div class="featured-content" style="justify-content: center;">
-        <h2 class="featured-title" style="color: #c5a059; font-size: 28px; text-transform: uppercase; letter-spacing: 2px;">
+    <div style="padding: 35px 40px 35px 45px; display: flex; flex-direction: column; justify-content: center;">
+        <h2 style="color: #c5a059; font-size: 28px; text-transform: uppercase; letter-spacing: 2px; margin: 0 0 20px 0;">
             ¡Únete a Nuestros Cursos!
         </h2>
         <p style="color: rgba(255,255,255,0.9); font-size: 16px; line-height: 1.7; margin-bottom: 25px;">
@@ -105,43 +105,43 @@
             Contamos con modalidades <strong style="color: #c5a059;">presencial</strong> y 
             <strong style="color: #c5a059;">virtual</strong> para adaptarnos a tu disponibilidad.
         </p>
-        <div class="featured-info-grid">
-            <div class="info-item" style="background: rgba(255,255,255,0.08); border: 1px solid rgba(197,160,89,0.3);">
-                <i class="fas fa-users" style="color: #c5a059;"></i>
+        <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; margin-bottom: 25px;">
+            <div style="display: flex; align-items: flex-start; gap: 12px; padding: 12px; background: rgba(255,255,255,0.08); border: 1px solid rgba(197,160,89,0.3); border-radius: 10px;">
+                <i class="fas fa-users" style="color: #c5a059; font-size: 20px; margin-top: 2px;"></i>
                 <div>
-                    <span class="info-label" style="color: rgba(255,255,255,0.6);">Modalidad</span>
-                    <span class="info-value" style="color: white;">Presencial</span>
+                    <span style="font-size: 11px; color: rgba(255,255,255,0.6); text-transform: uppercase; font-weight: 600; display: block;">Modalidad</span>
+                    <span style="font-size: 14px; color: white; font-weight: 600;">Presencial</span>
                 </div>
             </div>
-            <div class="info-item" style="background: rgba(255,255,255,0.08); border: 1px solid rgba(197,160,89,0.3);">
-                <i class="fas fa-laptop" style="color: #c5a059;"></i>
+            <div style="display: flex; align-items: flex-start; gap: 12px; padding: 12px; background: rgba(255,255,255,0.08); border: 1px solid rgba(197,160,89,0.3); border-radius: 10px;">
+                <i class="fas fa-laptop" style="color: #c5a059; font-size: 20px; margin-top: 2px;"></i>
                 <div>
-                    <span class="info-label" style="color: rgba(255,255,255,0.6);">Modalidad</span>
-                    <span class="info-value" style="color: white;">Virtual</span>
+                    <span style="font-size: 11px; color: rgba(255,255,255,0.6); text-transform: uppercase; font-weight: 600; display: block;">Modalidad</span>
+                    <span style="font-size: 14px; color: white; font-weight: 600;">Virtual</span>
                 </div>
             </div>
-            <div class="info-item" style="background: rgba(255,255,255,0.08); border: 1px solid rgba(197,160,89,0.3);">
-                <i class="fas fa-certificate" style="color: #c5a059;"></i>
+            <div style="display: flex; align-items: flex-start; gap: 12px; padding: 12px; background: rgba(255,255,255,0.08); border: 1px solid rgba(197,160,89,0.3); border-radius: 10px;">
+                <i class="fas fa-certificate" style="color: #c5a059; font-size: 20px; margin-top: 2px;"></i>
                 <div>
-                    <span class="info-label" style="color: rgba(255,255,255,0.6);">Certificación</span>
-                    <span class="info-value" style="color: white;">Acreditada</span>
+                    <span style="font-size: 11px; color: rgba(255,255,255,0.6); text-transform: uppercase; font-weight: 600; display: block;">Certificación</span>
+                    <span style="font-size: 14px; color: white; font-weight: 600;">Acreditada</span>
                 </div>
             </div>
-            <div class="info-item" style="background: rgba(255,255,255,0.08); border: 1px solid rgba(197,160,89,0.3);">
-                <i class="fas fa-coins" style="color: #c5a059;"></i>
+            <div style="display: flex; align-items: flex-start; gap: 12px; padding: 12px; background: rgba(255,255,255,0.08); border: 1px solid rgba(197,160,89,0.3); border-radius: 10px;">
+                <i class="fas fa-coins" style="color: #c5a059; font-size: 20px; margin-top: 2px;"></i>
                 <div>
-                    <span class="info-label" style="color: rgba(255,255,255,0.6);">Precio</span>
-                    <span class="info-value" style="color: white;">Gratuito</span>
+                    <span style="font-size: 11px; color: rgba(255,255,255,0.6); text-transform: uppercase; font-weight: 600; display: block;">Precio</span>
+                    <span style="font-size: 14px; color: white; font-weight: 600;">Gratuito</span>
                 </div>
             </div>
         </div>
-        <div class="featured-footer" style="border-top: 1px solid rgba(197,160,89,0.3);">
-    <a href="#cursos-lista" class="btn-featured" style="background: linear-gradient(135deg, #c5a059, #d4b06a); color: #00093C; text-decoration: none;">
-        Ver Cursos <i class="fas fa-chevron-down"></i>
-    </a>
-</div>
+        <div style="display: flex; justify-content: flex-end; padding-top: 25px; border-top: 1px solid rgba(197,160,89,0.3);">
+            <a href="#cursos-lista" style="padding: 16px 32px; background: linear-gradient(135deg, #c5a059, #d4b06a); color: #00093C; border-radius: 12px; font-size: 16px; font-weight: 700; text-decoration: none; display: flex; align-items: center; gap: 10px;">
+                Ver Cursos <i class="fas fa-chevron-down"></i>
+            </a>
+        </div>
     </div>
-</article>
+</div>
 
                 <!-- Grid de Cursos Regulares -->
                 <div class="courses-grid" id="cursos-lista">
