--- a/nos/Nosotros.html
+++ b/nos/Nosotros.html
@@ -365,7 +365,7 @@
                             <i class="fas fa-users"></i>
                         </div>
                         <div class="stat-number" data-target="1200">0</div>
-                        <p class="stat-label">Ciudadanos firmados en las brigadas de rescate, USAR y demás certificaciones</p>
+                        <p class="stat-label">Ciudadanos formados en las brigadas de rescate, USAR y demás certificaciones</p>
                     </div>
 
                     <div class="stat-card fade-in-element fade-delay-2">
